objects/FLODocs__FLO_Change_Request__c.object
<CustomObject>
    <description>Change requests are used to seek approval for changes to processes and related customizations.</description>
    <fields>
        <fullName>FLODocs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activation status of the Change Request</description>
        <inlineHelpText>Activation status of the Change Request</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Additional_Approvers__c</fullName>
        <description>Additional approvers to be selected as the approvers of the Change Request</description>
        <inlineHelpText>Additional approvers to be selected as the approvers of the Change Request</inlineHelpText>
        <label>Additional Approvers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Affected_Bundle_Id__c</fullName>
        <description>ManagedPackage Namespace to be used to group changes</description>
        <inlineHelpText>ManagedPackage Namespace to be used to group changes</inlineHelpText>
        <label>Affected Package Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Affected_Processes__c</fullName>
        <description>This is the process to be changed.</description>
        <inlineHelpText>This is the process to be changed.</inlineHelpText>
        <label>Affected Process(es)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__All_Approvers_Reason__c</fullName>
        <label>All Approvers Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approval_Status__c</fullName>
        <description>This is the approval status of the change request.</description>
        <inlineHelpText>This is the approval status of the change request.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Approve_process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve process</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipName>FLO_Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approved_By__c</fullName>
        <description>This field shows the users who have approved the change request by clicking the approve button. The approve button requires that the approver check the impact analysis before approving.</description>
        <inlineHelpText>This field shows the users who have approved the change request by clicking the approve button. The approve button requires that the approver check the impact analysis before approving.</inlineHelpText>
        <label>Approved By</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approved_Is_Included_in_Mandated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Is Included in Mandated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approver_Notes__c</fullName>
        <description>These are the notes made by the approver explaining the approval decision.</description>
        <inlineHelpText>These are the notes made by the approver explaining the approval decision.</inlineHelpText>
        <label>Approver Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person whose approval is required for the specified change. It is set by the approval script based on the approval path rules.</description>
        <inlineHelpText>This is the person whose approval is required for the specified change. It is set by the approval script based on the approval path rules.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Archiving_Status__c</fullName>
        <description>This field tracks whether the data for the fields in question has been archived.  This must be set to Skip, Complete or Manually Completed in order to proceed to delete fields.</description>
        <inlineHelpText>This field tracks whether the data for the fields in question has been archived.  This must be set to Skip, Complete or Manually Completed in order to proceed to delete fields.</inlineHelpText>
        <label>Archiving Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Archiving_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Assigned_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Analyst assigned to this Change Request.</description>
        <inlineHelpText>Business Analyst assigned to this Change Request.</inlineHelpText>
        <label>Assigned BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Auto_Approve_Based_On_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check enable the auto approve of the noncompliance changes detected that belong to the bundle specify in Affected Bundle Id</description>
        <inlineHelpText>When check enable the auto approve of the noncompliance changes detected that belong to the bundle specify in Affected Bundle Id</inlineHelpText>
        <label>Auto-Approve Based On Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Budgeted_Cost__c</fullName>
        <description>This is the expected cost of the change.</description>
        <inlineHelpText>This is the expected cost of the change.</inlineHelpText>
        <label>Budgeted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FLODocs__Budgeted_Hours__c</fullName>
        <description>These are the hours of time expected to complete the change, if known.</description>
        <inlineHelpText>These are the hours of time expected to complete the change, if known.</inlineHelpText>
        <label>Budgeted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Level_Required__c</fullName>
        <description>This is the change level required by the applicable policy rules.</description>
        <inlineHelpText>This is the change level required by the applicable policy rules.</inlineHelpText>
        <label>Change Level Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Control_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Overview__c</fullName>
        <description>This is a summary of the desired change.</description>
        <inlineHelpText>This is a summary of the desired change.</inlineHelpText>
        <label>Change Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows the approval path rules determined by the system to be applicable.</description>
        <inlineHelpText>This field shows the approval path rules determined by the system to be applicable.</inlineHelpText>
        <label>Policy</label>
        <referenceTo>FLODocs__FLO_Change_Approval_Policy__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>FLO_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group associated with this Change Request.</description>
        <inlineHelpText>Group associated with this Change Request.</inlineHelpText>
        <label>Change Request Group</label>
        <referenceTo>FLODocs__FLO_Change_Request_Group__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request_Type__c</fullName>
        <label>Change Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customizations</fullName>
                    <default>true</default>
                    <label>Customizations</label>
                </value>
                <value>
                    <fullName>Data Records</fullName>
                </value>
                <value>
                    <fullName>Processes</fullName>
                    <isActive>false</isActive>
                    <label>Processes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Stage__c</fullName>
        <label>Change Stage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Type__c</fullName>
        <description>This is the type of change: Minor -  an adjustment to a current process not requiring a new customization or new code, Major - an adjustment to an existing process that requires new customizations to be created or new code to be written, New Process - Implementation of a new process of substantial scope.</description>
        <inlineHelpText>This is the type of change: Minor -  an adjustment to a current process not requiring a new customization or new code, Major - an adjustment to an existing process that requires new customizations to be created or new code to be written, New Process</inlineHelpText>
        <label>Change Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Completion_Status__c</fullName>
        <description>This is the stage of completion for the change request.</description>
        <inlineHelpText>This is the stage of completion for the change request.</inlineHelpText>
        <label>Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Created_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the process issue that the change request was created from.</description>
        <inlineHelpText>This is the process issue that the change request was created from.</inlineHelpText>
        <label>Created From</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipName>FLO_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Custom_Status__c</fullName>
        <description>Custom Change Request Status</description>
        <inlineHelpText>Custom Change Request Status</inlineHelpText>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Import_Status__c</fullName>
        <description>This field shows the status of the customization import process</description>
        <inlineHelpText>This field shows the status of the customization import process</inlineHelpText>
        <label>Customization Import Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customizations__c</fullName>
        <description>Customizations related to the FLO Change Request</description>
        <inlineHelpText>Customizations related to the FLO Change Request</inlineHelpText>
        <label>Customizations</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Records__c</fullName>
        <description>Existing data records associated with the Change Request.</description>
        <inlineHelpText>Existing data records associated with the Change Request.</inlineHelpText>
        <label>Data Records</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Assigned__c</fullName>
        <description>User assigned to the deployment related to a FLO Change Request</description>
        <inlineHelpText>User assigned to the deployment related to a FLO Change Request</inlineHelpText>
        <label>Deployment Assigned</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Date__c</fullName>
        <description>Enter the date the deployment is scheduled to be completed.</description>
        <inlineHelpText>Enter the date the deployment is scheduled to be completed.</inlineHelpText>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Dev_Effort__c</fullName>
        <description>Number that represents the relative or absolute Development Effort for this Change Request. (Story Points, Hours, Days, etc.)</description>
        <inlineHelpText>Number that represents the relative or absolute Development Effort for this Change Request. (Story Points, Hours, Days, etc.)</inlineHelpText>
        <label>Dev Effort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Developers__c</fullName>
        <description>These are the developers who worked on the change.</description>
        <inlineHelpText>Enter the names of the developers who worked on the change.</inlineHelpText>
        <label>Developers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Approved_By__c</fullName>
        <description>This is the Approver user to the external system ticket</description>
        <inlineHelpText>This is the Approver user to the external system ticket</inlineHelpText>
        <label>External Approved By</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Change_Request_Number__c</fullName>
        <description>External System ticket number</description>
        <inlineHelpText>External System ticket number</inlineHelpText>
        <label>External Change Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Created_By__c</fullName>
        <description>The user that created the External system ticket</description>
        <inlineHelpText>The user that created the External system ticket</inlineHelpText>
        <label>External Created By</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Last_modified_By__c</fullName>
        <description>The user that made the last change to the external system ticket</description>
        <inlineHelpText>The user that made the last change to the external system ticket</inlineHelpText>
        <label>External Last modified By</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Link__c</fullName>
        <description>This is the link to any external record relevant to the change such as an external change management record.</description>
        <inlineHelpText>This is the link to any external record relevant to the change such as an external change management record.</inlineHelpText>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__External_Type__c</fullName>
        <description>Standard Issue type from the External System</description>
        <inlineHelpText>Standard Issue type from the External System</inlineHelpText>
        <label>External Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__FLO_level_requirement__c</fullName>
        <label>Level requirement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Flo_LastApprover__c</fullName>
        <label>LastApprover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Flo_Order_Approver__c</fullName>
        <description>Order of approvers in the FLO  Change Request - Internal use / Logic</description>
        <inlineHelpText>Order of approvers in the FLO  Change Request - Internal use / Logic</inlineHelpText>
        <label>Order Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Impact_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When check execute the impact analysis</description>
        <inlineHelpText>When check execute the impact analysis</inlineHelpText>
        <label>Impact Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Impacted_Processes__c</fullName>
        <description>These are processes other than the affected processes which could be impacted by changes to the specified customizations.</description>
        <inlineHelpText>These are processes other than the affected processes which could be impacted by changes to the specified customizations.</inlineHelpText>
        <label>Impacted Processes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Import_Customizations_History__c</fullName>
        <description>History related to all the customizations being imported from Change Set, Manifest XML and manually updated</description>
        <inlineHelpText>History related to all the customizations being imported from Change Set, Manifest XML and manually updated</inlineHelpText>
        <label>Import Customizations History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Import_From_Processes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that triggers the customization import script</description>
        <inlineHelpText>This field triggers the import of customizations from the &amp;quot;Affected Processes&amp;quot; and potentially their children.  You can decide which process(es) to import and whether to include their subprocesses as the import begins.</inlineHelpText>
        <label>Import From Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this Change Request represents a Release. The Customizations from all related (child) Change Requests are rolled up into this Release for deployment.</description>
        <inlineHelpText>True if this Change Request represents a Release. The Customizations from all related (child) Change Requests are rolled up into this Release for deployment.</inlineHelpText>
        <label>Is Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Mandated_Approvers__c</fullName>
        <description>This field stores the mandated approvers based on the rules set in the relevant Approval Path records. It is used to detect when the approvers are changed from the mandated settings.</description>
        <inlineHelpText>This field stores the mandated approvers based on the rules set in the relevant Approval Path records.</inlineHelpText>
        <label>Mandated Approver(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Manually_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to flag manual update.</description>
        <inlineHelpText>Field to flag manual update.</inlineHelpText>
        <label>Manually Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Originating_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field that links the related Case to the CR. The CaseID is stored in this field</description>
        <inlineHelpText>Internal Use - (CaseID linked to the CR)</inlineHelpText>
        <label>Originating Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>FLO_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Originating_Issue_RFC_Formula__c</fullName>
        <description>Issue originated from Process Issue related to the Parent Change Request</description>
        <formula>NULLVALUE( NULLVALUE(FLODocs__Parent_Change_Request__r.FLODocs__Created_From__c, FLODocs__Parent_Change_Request__r.FLODocs__External_Change_Request_Number__c) , FLODocs__External_Change_Request_Number__c)</formula>
        <inlineHelpText>Issue originated from Process Issue related to the Parent Change Request</inlineHelpText>
        <label>Originating Issue / RFC (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the change request that represents the change to which a deployment or subsequent change request belongs.</description>
        <inlineHelpText>Set this field to record the change request that this change request or deployment record relates.</inlineHelpText>
        <label>Parent Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>FLO_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Post_Deployment_Steps__c</fullName>
        <description>Manual steps required after deployment.</description>
        <inlineHelpText>Manual steps required after deployment.</inlineHelpText>
        <label>Post-Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Pre_Deployment_Steps__c</fullName>
        <description>Manual steps required prior to deployment.</description>
        <inlineHelpText>Manual steps required prior to deployment.</inlineHelpText>
        <label>Pre-Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Priority__c</fullName>
        <description>The priority of this Change Request, typically relative to others in the same Release or Sprint.</description>
        <inlineHelpText>The priority of this Change Request, typically relative to others in the same Release or Sprint.</inlineHelpText>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Proposed_Customizations__c</fullName>
        <description>Customizations to be created in the future, and get pre-approval of those customizations. The information of the API Name of the customizations must be equal and match to the ones to be created. (e.g: CustomField = Account.FieldA__c, or ContactTrigger = ApexTrigger )</description>
        <inlineHelpText>Customizations to be created in the future, and get pre-approval of those customizations. The information of the API Name of the customizations must be equal and match to the ones to be created. (e.g: CustomField = Account.FieldA__c, or ContactTrigger = A</inlineHelpText>
        <label>Proposed Customization(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Proposed_Data_Records__c</fullName>
        <description>Proposed (ie - not yet created) data records associated with the Change Request.</description>
        <inlineHelpText>Proposed (ie - not yet created) data records associated with the Change Request.</inlineHelpText>
        <label>Proposed Data Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Proposed_Process_es__c</fullName>
        <description>This is the process that is proposed to replace the existing process</description>
        <inlineHelpText>This is the process that is proposed to replace the existing process</inlineHelpText>
        <label>Proposed Process(es)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to indicate that the record is being created in a push from another account</description>
        <inlineHelpText>Use to indicate that the record is being created in a push from another account</inlineHelpText>
        <label>Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Reason__c</fullName>
        <description>This is the reason of the Change request</description>
        <inlineHelpText>This is the reason of the Change request</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Rejected_By__c</fullName>
        <description>This field records any person who has rejected the change request. Rejecting a change request stops further approval processes. This field is cleared if the approver subsequently approves the Change Request.</description>
        <inlineHelpText>his field records any person who has rejected the change request. Rejecting a change request stops further approval processes. This field is cleared if the approver subsequently approves the Change Request.</inlineHelpText>
        <label>Rejected By</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Release_Date__c</fullName>
        <description>Planned date for the release.</description>
        <inlineHelpText>Planned date for the release.</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Change Request representing the Release that this Change Request belongs to.</description>
        <inlineHelpText>The parent Change Request representing the Release that this Change Request belongs to.</inlineHelpText>
        <label>Release</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>No matching &apos;Release&apos; Change Request. The &apos;Release&apos; Change Request must have &apos;Is Release&apos; checked. The &apos;Release&apos; Change Request must not be &apos;Completed&apos;.</errorMessage>
            <filterItems>
                <field>FLODocs__FLO_Change_Request__c.FLODocs__Is_Release__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>FLODocs__FLO_Change_Request__c.FLODocs__Completion_Status__c</field>
                <operation>notEqual</operation>
                <value>Completed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Release Items</relationshipLabel>
        <relationshipName>Release_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Remove_Inactive_Customizations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove inactive customizations - N/A</description>
        <inlineHelpText>Remove inactive customizations - N/A</inlineHelpText>
        <label>Remove Inactive Customizations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Requires_Manual_Deployment_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if either manual pre- or post-deployment steps are required.</description>
        <inlineHelpText>True if either manual pre- or post-deployment steps are required.</inlineHelpText>
        <label>Requires Manual Deployment Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Results_Filter__c</fullName>
        <description>Enter values that must be return by the report in order to clear it. 
Example to allow administrator changes by John Smit on transaction 12345 or 12346 use:

John Smit,INV03091448|INV03091448

For changes by John Smit and Mark Smit on certain transactions use: 

John Smit,INV03091448;Mark Smit,INV03091448

For any change by John Smit use:

John Smit</description>
        <inlineHelpText>Enter values that must be return by the report in order to clear it. (see field description for samples)</inlineHelpText>
        <label>Results Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Customization__c</fullName>
        <description>Search Customization - N/A - Future</description>
        <inlineHelpText>Search Customization - N/A - Future</inlineHelpText>
        <label>Search Customization</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Process__c</fullName>
        <description>Search Process</description>
        <inlineHelpText>Search Process</inlineHelpText>
        <label>Search Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__SourceId__c</fullName>
        <label>Source Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Source_Enviroment__c</fullName>
        <label>Source Enviroment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Stage__c</fullName>
        <description>This is the stage of the change request:
Change Request - a unapproved or approved request for a change
Development Project - a change under development in production or sandbox
Deployment Record - a completed development project being approved back to development</description>
        <inlineHelpText>This is the stage of the change request (see description for value details)</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Change_Request_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status-DEPRECATED</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__TargetId__c</fullName>
        <label>Target Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Target_Environment__c</fullName>
        <label>Target Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>FLODocs__All_Change_Requests_2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>FLODocs__Stage__c</columns>
        <columns>FLODocs__Completion_Status__c</columns>
        <columns>FLODocs__Approval_Status__c</columns>
        <columns>FLODocs__Change_Type__c</columns>
        <columns>FLODocs__Change_Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Requests (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__All_Change_Requests_v3</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>FLODocs__Stage__c</columns>
        <columns>FLODocs__Completion_Status__c</columns>
        <columns>FLODocs__Approval_Status__c</columns>
        <columns>FLODocs__Change_Type__c</columns>
        <columns>FLODocs__Change_Request_Type__c</columns>
        <columns>FLODocs__Is_Release__c</columns>
        <columns>FLODocs__Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Change Requests (v3)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Changes_Not_Started_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Completion_Status__c</columns>
        <columns>FLODocs__Approval_Status__c</columns>
        <columns>FLODocs__Change_Type__c</columns>
        <columns>FLODocs__Stage__c</columns>
        <columns>FLODocs__Status__c</columns>
        <columns>FLODocs__Approved_By__c</columns>
        <columns>FLODocs__Approver__c</columns>
        <columns>FLODocs__Approver_Notes__c</columns>
        <columns>FLODocs__Change_Level_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Completion_Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Changes Not Started (v2)</label>
    </listViews>
</CustomObject>